--- a/long_task_project/verification/templates/verification/index.html
+++ b/long_task_project/verification/templates/verification/index.html
@@ -5,7 +5,7 @@
     <title>Verification</title>
 </head>
 <body>
-    <h1>Please input yor phone number</h1>
+    <h1>Please input your phone number</h1>
     <form action="{% url 'verification' %}" method="post">
         {% csrf_token %}
         {{ form.as_p }}
