--- a/long_task_project/verification/templates/verification/verification_done.html
+++ b/long_task_project/verification/templates/verification/verification_done.html
@@ -5,6 +5,6 @@
     <title>Send sms</title>
 </head>
 <body>
-    <h1>Your SMS successful send!</h1>
+    <h1>Your phone successful verification!</h1>
 </body>
 </html>
